# hire-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  database.py  security.py
app/middlewares/: auth_guard.py  role_guard.py
app/modules/ai_engines/ai_teacher/: repository.py  routes.py  schema.py  service.py
app/modules/ai_engines/gap_analysis/: model.py  repository.py  routes.py  schema.py  service.py
app/modules/ai_engines/job_searcher/: routes.py  schema.py  service.py
app/modules/ai_engines/recommendation/: model.py  repository.py  routes.py  schema.py  service.py
app/modules/ai_engines/resume_parser/: repository.py  routes.py  schema.py  service.py
app/modules/ai_engines/scraper/: repository.py  routes.py  schema.py  service.py
app/modules/ai_engines/study_plan/: repository.py  routes.py  schema.py  service.py
app/modules/api/admin/: model.py  repository.py  routes.py  schema.py  service.py
app/modules/api/application/: model.py  repository.py  routes.py  schema.py  service.py
app/modules/api/candidate/: model.py  repository.py  routes.py  schema.py  service.py
app/modules/api/coding/: __init__.py  routes.py
app/modules/api/dashboard/: repository.py  routes.py  schema.py  service.py
app/modules/api/interview/: model.py  repository.py  routes.py  schema.py  service.py
app/modules/api/job/: model.py  repository.py  routes.py  schema.py  (+1 more)
app/modules/auth/: repository.py  routes.py  schema.py  service.py
app/utils/: helpers.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
(+20 files in other folders)
