[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hire-backend"
version = "0.1.0"
description = "AI-powered career development and recruitment platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hire Team"}
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "motor>=3.3.2",
    "redis>=5.0.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "email-validator>=2.2.0",
    "openai>=1.75.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.9",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "playwright>=1.53.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
